--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Vite + React + TS</title>
   </head>
   <body class="m-auto">
-    <div id="root" class="w-full"></div>
+    <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://kit.fontawesome.com/6d551acd4d.js" crossorigin="anonymous"></script>
   </body>
 </html>
